--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 
             <div class="app">
+                <ul id="chatas"></ul>
+
                 <h3 id="vardas">Vardenis Pavardenis</h3>
                 <p id="krovinio_nr">Krovinio nr.: 23857238905</p>
 
