--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
             <div class="app">
-                <ul id="chatas"></ul>
+                <ul id="list"></ul>
 
                 <h3 id="vardas">Vardenis Pavardenis</h3>
                 <p id="krovinio_nr">Krovinio nr.: 23857238905</p>
